--- a/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
@@ -1040,6 +1040,7 @@
                                                                     </div>
                                                                     <div class="row bingkai-PEMENANG" >
                                                                     </div>
+
                                                                     <div class="row">
                                                                         <div class="col-md-10">
                                                                             <div class="row">
@@ -1071,7 +1072,8 @@
                                                                             </div>
                                                                         </div>
                                                                     </div>
-                                                                     <div class="row bingkai-persetujuan-terkait">
+
+                                                                    <div class="row bingkai-persetujuan-terkait">
                                                                          <div class="col-md-10">
                                                                              <div class="row">
                                                                                 <div class="col-md-4">
@@ -1093,6 +1095,46 @@
                                                                             </div>
                                                                          </div>
                                                                      </div>
+                                                                  
+                                                                    <div class="bingkai-pengajuan-pemenang" style="display:none">
+                                                                        <div class="row">
+                                                                              <div class="col-md-10">
+                                                                                 <div class="row">
+                                                                                    <div class="col-md-8">
+                                                                                        <div class="form-group">
+                                                                                            <label class="title">List User Approver Persetujuan Pemenang:</label>
+                                                                                        </div>
+                                                                                    </div>
+                                                                                </div>
+                                                                             </div>
+                                                                         </div>
+                                                                         <div class="row">
+                                                                             <div class="col-md-2">
+                                                                                <button class="btn btn-success pull-left pilih-user-approver-pemenang ">Pilih User</button>
+                                                                                 
+                                                                            </div>
+                                                                              <div class="col-md-2">
+                                                                                 <button class="btn btn-success pull-left save-workflow-pemenang">Save Workflow</button>
+                                                                            </div>
+                                                                        </div>
+                                                                        <div class="row" >
+                                                                              <div class="col-md-10">
+                                                                                  
+                                                                                <table class="table table-bordered table-striped table-responsive" id="tbl_apporval_pemenang" style="margin-top:20px; ">
+                                                                                    <thead>
+                                                                                        <tr>
+                                                                                            <th>User</th>
+                                                                                            <th>Jabatan</th>
+                                                                                            <th></th>
+                                                                                        </tr>
+                                                                                    </thead>
+                                                                                    <tbody>
+                                                                                    </tbody>
+                                                                                </table>
+                                                                             </div>
+                                                                         </div>
+                                                                     </div>                                                                   
+                                                                 
                                                                     <div class="row bingkai-pengajuan-pemenang" style="display:none">
                                                                           <div class="col-md-10">
                                                                              <div class="row">
@@ -1352,22 +1394,7 @@
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
-    <!--<div id="view-siup" class="modal fade" role="dialog">
-        <div class="modal-dialog modal-lg">
-        <input type="hidden" id="row_index" />
-
-        <div class="modal-content">
-            <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
-            </div>
-            <div class="modal-body">
-            <div>
-                <iframe width="100%" style="min-height: 500px" src="/ViewerJS/#../contoh.pdf"  allowfullscreen webkitallowfullscreen></iframe>
-            </div>
-            </div>
-        </div>
-        </div>
-    </div>-->
+    
     <!--kilk persetujuan-->
     <!-- Modal -->
     <div class="modal" id="modal-persetujuan" role="dialog" aria-hidden="true">
@@ -1498,8 +1525,40 @@
 	          </div>
 	        </div><!-- /.modal-content -->
           </div><!-- /.modal-dialog -->
-        </div><!-- /.modal -->
+        </div>
+    <!-- /.modal -->
     
+    <!-- Modal -->
+        <div class="modal" id="user-approver" role="dialog"  aria-hidden="true">
+          <input type="hidden" id="workflowapproverId" />            
+          <div class="modal-dialog">
+	        <div class="modal-content">
+	          <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		        <h4 class="modal-title" id="H1">User List</h4>
+	          </div>
+	          <div class="modal-body">
+		        <table class="table table-bordered table-striped table-responsive" id="tbl-user-approver" style="margin-top:20px; ">
+                    <thead>
+                        <tr>
+                            
+                            <th>User</th>
+                            <th>Jabatan</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+	          </div>
+	          <div class="modal-footer">	
+		        <button type="button" class="btn btn-default " data-dismiss="modal" >Close</button>		
+	          </div>
+	        </div><!-- /.modal-content -->
+          </div><!-- /.modal-dialog -->
+        </div>
+    <!-- /.modal -->
+
     <!-- jQuery 2.1.4 -->
 
 
@@ -1540,6 +1599,7 @@
     <script src="dist/js/rubah-personil.js"></script>
     <script src="dist/js/riwayat-pengadaan.js"></script>
     <script src="dist/js/pelaksanaan-penentuan-pemenang.js"></script>
+     <script src="dist/js/workflow.js"></script>
     
     <script>
         cekLogin(0)
